--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ header {
   width: 97%;
   height: 50px;
   background-color: white;
-  border: 1px solid black;
+  /*border: 1px solid black;*/
 }
 
 header nav {
