--- a/style.css
+++ b/style.css
@@ -34,19 +34,15 @@ header nav {
 /*About Me Image and Text*/
 
 #about img {
-  /*float: left;*/
   display: inline-block;
-  width: 200px;
   height: auto;
   border-radius: 20%;
   margin-right: 20px;
+  float: left;
 }
 
 #about p {
-  display: inline-block;
   position: relative;
-  top: -140px;
-  width: 45%;
   text-align: left;
   margin-left: 20px;
 }
