--- a/style.css
+++ b/style.css
@@ -62,18 +62,8 @@ header nav {
   margin-bottom: 20px;
 }
 
-/*portfolio projects*/
-section#portfolio_container {
-}
-
 .portfolio_item {
   margin: 0 auto;
-}
-
-.portfolio_item img {
-  border-radius: 5%;
-  width: 400px;
-  height: 300px;
 }
 
 #portfolio_container .portfolio_item {
@@ -86,10 +76,22 @@ section#portfolio_container {
   margin: 10px auto 0;
 }
 
+.portfolio_item h2 {
+  text-align: center;
+}
+
 .portfolio_item strong {
   width: 500px;
   text-align: left;
   display: block;
+}
+
+.portfolio_item img {
+  border-radius: 5%;
+  width: 700px;
+  height: 400px;
+  /*margin: 0 30px 0 30px;*/
+  margin: 10px;
 }
 
 img.tiny_logo {
@@ -161,4 +163,33 @@ footer {
   bottom: 0px;
   width: 600px;
   margin: 40px auto;
+}
+
+
+@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation : portrait) and (-webkit-device-pixel-ratio: 2){
+/* Styles */
+  body {
+    font-size: 2.5em;
+  }
+
+  nav {
+    font-size: 30px;
+  }
+
+  .portfolio_item * {
+    width: 80%;
+  }
+
+  .portfolio_item strong {
+    display: inline;
+  }
+
+  #about {
+    width: 80%;
+  }
+
+  #about img {
+    width: 200px;
+    height: 200px;
+  }
 }
