--- a/style.css
+++ b/style.css
@@ -14,18 +14,25 @@ body {
 nav {
   background-color: lightblue;
   height: 50px;
-
   display: flex;
-  justify-content: flex-end;
   align-items: center;
+  justify-content: flex-end;
   width: 100%;
+  position: fixed;
+  z-index: 1;
 }
 
 nav a {
-  margin: 15px;
+  height: 100%;
+  width: 75px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
+nav a:hover {
+  background-color: white;
+}
 
 /*----- Main Body Section -----*/
 #main {
@@ -126,10 +133,6 @@ img.tiny_logo.github_logo {
   height: 30px;
 }
 
-
-
-
-
 /*#contact_form {
   text-align: center;
   left: 0;
@@ -159,4 +162,71 @@ footer {
   bottom: 0px;
   width: 600px;
   margin: 40px auto;
+}
+
+
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0b1 | 201101
+   NOTE: WORK IN PROGRESS
+   USE WITH CAUTION AND TEST WITH ABANDON */
+
+/* modified rset to remove ol, ul, li */
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, figcaption, figure, header, hgroup, menu, nav, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+
+/*Will comment this section out*/
+/*ol, ul {
+	list-style: none;
+}*/
+
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+
+/* remember to define visible focus styles!
+:focus {
+	outline: ?????;
+} */
+
+/* remember to highlight inserts somehow! */
+ins {
+	text-decoration: none;
+}
+del {
+	text-decoration: line-through;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
