--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 
 body {
   margin: 0 auto;
+  font-size: 18px;
 }
 
 /* nav bar */
@@ -32,6 +33,7 @@ nav a {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-right: 20px;
 }
 
 nav a:hover {
@@ -69,7 +71,6 @@ nav a:hover {
   overflow: auto;
   width: 60%;
   margin: 20px auto;
-  margin-top: 90px;
 }
 
 #about h2 {
@@ -92,6 +93,8 @@ nav a:hover {
 
 .portfolio_item h2 {
   text-align: center;
+  width: auto;
+  margin-bottom: 10px;
 }
 
 .portfolio_item strong {
@@ -102,8 +105,8 @@ nav a:hover {
 
 .portfolio_item img {
   border-radius: 5%;
-  width: 700px;
-  height: 400px;
+  width: 500px;
+  height: 300px;
   /*margin: 0 30px 0 30px;*/
   margin: 10px;
 }
@@ -188,7 +191,12 @@ footer {
   }
 
   nav a {
-    margin: 0 40px;
+    margin: 0 20px;
+  }
+
+  nav a:hover {
+    width: 105px;
+    background-color: white;
   }
 
   .portfolio_item * {
