--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 html,
 body {
-  height: 100%;
+  height: 100vh;
   /* will center all children elements of body - not just text */
   text-align: center;
-   /*background-color: green; */
+
+  /* Overflow applied to make html / body 100% of page height - which was prevent due to use of float*/
+  overflow: auto;
 }
 
 body {
@@ -12,7 +14,6 @@ body {
 }
 
 /* nav bar */
-
 nav {
   background-color: lightblue;
   height: 50px;
@@ -188,12 +189,18 @@ h1 {
 
 /*footer*/
 footer {
+  background-color: lightblue;
   position: relative;
+  top: 150px;
   text-align: center;
-  bottom: 0px;
-  width: 600px;
-  margin: 40px auto;
-  margin-top: 90px;
+  width: 100%;
+  height: 2.8em;
+  margin: 0 auto;
+  font-size: 20px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* media queries */
