Add scaling css for images

--- a/style.css
+++ b/style.css
@@ -41,6 +41,23 @@ nav a:hover {
   background-color: white;
 }
 
+/*scale images when user hovers*/
+img:hover {
+    transform: scale(1.1);
+    -ms-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
+    -o-transform: scale(1.1);
+}
+
+.tiny_logo:hover {
+    transform: scale(1.5);
+    -ms-transform: scale(1.5);
+    -webkit-transform: scale(1.5);
+    -moz-transform: scale(1.5);
+    -o-transform: scale(1.5);
+}
+
 /*----- Main Body Section -----*/
 #main {
   /*margin-top: 20px;*/
