--- a/style.css
+++ b/style.css
@@ -42,13 +42,13 @@ nav a:hover {
 }
 
 /*scale images when user hovers*/
-img:hover {
+/*img:hover {
     transform: scale(1.1);
     -ms-transform: scale(1.1);
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
     -o-transform: scale(1.1);
-}
+}*/
 
 .tiny_logo:hover {
     transform: scale(1.5);
@@ -58,14 +58,45 @@ img:hover {
     -o-transform: scale(1.5);
 }
 
+#profile-pic:hover {
+  /*transform: none;*/
+  transform: scale(1.05);
+}
+
 /*----- Main Body Section -----*/
 #main {
   /*margin-top: 20px;*/
+  color: black;
   position: relative;
-  top: 70px;
+  top: 50px;
+  margin: 0;
+  padding: 0;
+
+
+  /*background: url(assets/france.jpg) no-repeat 50% -80px fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;*/
 }
 
 /*About Me Image and Text*/
+
+#about {
+  width: 100%;
+  height: 600px;
+  overflow: auto;
+  margin: 0 auto;
+  color: rgb(247, 255, 254);
+  padding: 15px;
+
+  /*fixing image to background to render parallax scrolling*/
+  background: url(assets/france.jpg) no-repeat 50% -80px fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 #about img {
   display: inline-block;
@@ -85,14 +116,15 @@ img:hover {
   text-align: left;
 }
 
-#about {
-  overflow: auto;
-  width: 60%;
-  margin: 20px auto;
-}
-
 #about h2 {
   margin-bottom: 20px;
+}
+
+#about-description {
+  width: 80%;
+  padding: 20px;
+  margin: 0 auto;
+  font-size: 1.3em;
 }
 
 .portfolio_item {
@@ -104,7 +136,7 @@ img:hover {
 }
 
 .portfolio_item * {
-  width: 500px;
+  width: 90%;
   text-align: left;
   margin: 10px auto 0;
 }
@@ -116,9 +148,10 @@ img:hover {
 }
 
 .portfolio_item strong {
-  width: 500px;
+  width: 90%;
   text-align: left;
   display: block;
+  margin: 0;
 }
 
 .portfolio_item img {
@@ -140,7 +173,25 @@ img.tiny_logo.github_logo {
 }
 
 /*section semantic tag modifies default h1 tag; therefore manually specifiying font size*/
+
+/*#portfolio-wrapper {
+  background-color: white;
+  opacity: .8;
+  width: 80%;
+  margin: 0 auto;
+}*/
+
 #portfolio_container {
+  /*background-color: #cfe5f6;*/
+  position: relative;
+  top: -25px;
+  padding: 20px;
+
+  /*background: url(assets/code.jpeg) no-repeat 50% -80px fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;*/
 }
 
 #portfolio_container h1 {
@@ -180,6 +231,10 @@ h1 {
   width: 30px;
   height: 30px;
   /*line-height: 100px;*/
+}
+
+#contact_me .tiny_logo {
+  margin: 20px;
 }
 
 /*#contact_form {
@@ -248,8 +303,20 @@ footer {
     display: inline;
   }
 
+  .portfolio_item .flex-parent {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .portfolio_item .flex-parent div {
+    /*width: 70%;*/
+    background-color: lightblue;
+  }
+
+
   #about {
-    width: 80%;
+    /*width: 80%;*/
   }
 
   #about img {
