--- a/style.css
+++ b/style.css
@@ -149,9 +149,13 @@ nav a:hover {
 }
 
 .portfolio_item * {
-  width: 90%;
   text-align: left;
   margin: 10px auto 0;
+  /*font-size: 1em;*/
+}
+
+section.portfolio_item p, h2, h3, ul {
+  width: 65vw;
 }
 
 .portfolio_item h2 {
