--- a/style-with-bootstrap.css
+++ b/style-with-bootstrap.css
@@ -1,45 +1,33 @@
-html,
-body {
-  height: 100vh;
-  /* will center all children elements of body - not just text */
-/*   text-align: center; */
-  /*background-color: lightblue;*/
-
-
-  /* Overflow applied to make html / body 100% of page height - which was prevent due to use of float*/
-  overflow: auto;
-}
-
 nav li:hover {
   background-color: #9dcaa7;
 }
 
-div.container {
+section#about {
   margin-top: 55px;
-  
+  text-align: center;
 }
 
+.portfolio_item:first-of-type img:not(.tiny_logo) {
+  border: 1px solid black;
+}
 
-/*----- Main Body Section -----*/
-#main {
-  /*margin-top: 20px;*/
-  color: black;
+img.tiny_logo {
+  width: initial;
+  height: initial;
+}
+
+img.tiny_logo.github_logo {
   position: relative;
-  top: 50px;
-  margin: 0;
-  padding: 0;
-
-
-  /*background: url(assets/france.jpg) no-repeat 50% -80px fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;*/
+  top: -5px;
+}
+#contact_me .tiny_logo {
+  margin: 20px;
+  height: 30px;
 }
 
 #main-title {
   font-family: 'Fira Sans', sans-serif;
-  font-size: 4em;
+  /* font-size: 4em; */
   margin: 0;
   padding: 0;
 }
@@ -59,11 +47,25 @@ div.container {
   padding: 15px;
 
   /*fixing image to background to render parallax scrolling*/
-  background: url(assets/france.jpg) no-repeat 50% -80px fixed;
+  /* background: url(assets/france.jpg) no-repeat 50% -80px fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  background-size: cover;
+  background-size: cover; */
+
+  background-image: url(assets/france.jpg);
+  /* background-repeat:no-repeat;
+  background-size:contain;
+  background-position:center; */
+
+  background-repeat:no-repeat;
+  -webkit-background-size:cover;
+  -moz-background-size:cover;
+  -o-background-size:cover;
+  background-size:cover;
+  background-position:center;
+  
+  
 }
 
 
@@ -93,170 +95,36 @@ div.container {
   width: 80%;
   padding: 20px;
   margin: 0 auto;
-  font-size: 1.3em;
+  /* font-size: 1.3em; */
 }
 
-.portfolio_item {
-  margin: 0 auto;
+@media screen and (max-width:630px) {
+  #about-description {
+    width: 80%;
+    padding: 20px;
+    margin: 0 auto;
+    /* font-size: 1.3em; */
+  }
+
+  #about-description img {
+    /* display: block; */
+    /* width: 70%; */
+    margin: 0 auto;
+  }
+
+  #about-description p {
+    display: block;
+    width: 100%;
+  }
+
+    
 }
 
-#portfolio_container .portfolio_item {
-  margin-top: 40px;
-}
 
-.portfolio_item * {
-  text-align: left;
-  margin: 10px auto 0;
-}
+/* html {
+  font-size: 14px;
+} */
 
-section.portfolio_item p, h2, h3, ul {
-  /*width: 75vw;*/
-  width: 55%;
-}
+/* @media (min-width: @screen-sm-min) { 
 
-.portfolio_item h2 {
-  text-align: center;
-  width: auto;
-  margin-bottom: 10px;
-}
-
-.portfolio_item strong {
-  width: 90%;
-  text-align: left;
-  display: block;
-  margin: 0;
-}
-
-.portfolio_item img {
-  border-radius: 5%;
-  width: 500px;
-  height: 300px;
-  /*margin: 0 30px 0 30px;*/
-  margin: 10px;
-}
-
-.portfolio_item:first-of-type img:not(.tiny_logo) {
-  /*background-color: yellow;*/
-  border: 1px solid black;
-}
-
-img.tiny_logo {
-  width: initial;
-  height: initial;
-}
-
-img.tiny_logo.github_logo {
-  position: relative;
-  top: -5px;
-}
-
-/*section semantic tag modifies default h1 tag; therefore manually specifiying font size*/
-
-/*#portfolio-wrapper {
-  background-color: white;
-  opacity: .8;
-  width: 80%;
-  margin: 0 auto;
-}*/
-
-#portfolio_container {
-  /*background-color: #cfe5f6;*/
-  position: relative;
-  top: -25px;
-  padding: 20px;
-
-  /*background: url(assets/code.jpeg) no-repeat 50% -80px fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;*/
-}
-
-#portfolio_container h1 {
-  font-size: 30px;
-}
-
-/*Contact Me Form*/
-#contact_me h1 {
-  line-height: 40%;
-}
-
-#resume input {
-  width: 25%;
-  height: 50px;
-  border-radius: 20px;
-  font-size: 1.2em;
-  background-color: lightblue;
-}
-
-#resume input:hover {
-  cursor: pointer;
-  transform: scale(1.1);
-  -ms-transform: scale(1.1);
-  -webkit-transform: scale(1.1);
-  -moz-transform: scale(1.1);
-  -o-transform: scale(1.1);
-}
-
-h1 {
-  font-size: 30px;
-}
-
-#contact_me {
-  position: relative;
-  top: 14px;
-}
-
-#contact_me p {
-  font-size: 25px;
-  margin-bottom: 30px;
-  line-height: 40%;
-}
-
-#contact_me img {
-  width: 30px;
-  height: 30px;
-  /*line-height: 100px;*/
-}
-
-#contact_me .tiny_logo {
-  margin: 20px;
-}
-
-/*#contact_form {
-  text-align: center;
-  left: 0;
-  right: 0;
-  bottom: 90px;
-  width: 600px;
-  margin: 0 auto;
-  border: 1px solid black;
-  padding: 2px;
-}
-
-#contact_form textarea {
-  length: 500px;
-  width: 500px;
-  font-size: 18px;
-}
-
-#contact_form input {
-  width: 20%;
-  height: 2em;
-}*/
-
-/*footer*/
-footer {
-  background-color: lightblue;
-  position: relative;
-  top: 150px;
-  text-align: center;
-  width: 100%;
-  height: 2.8em;
-  margin: 0 auto;
-  font-size: 20px;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
+} */
