--- a/app/css/bootstrap.css
+++ b/app/css/bootstrap.css
@@ -26,6 +26,7 @@ nav,
 section,
 summary {
   display: block;
+  /* height: 700px; */
 }
 audio,
 canvas,
@@ -1114,7 +1115,7 @@ figure {
   margin: 0;
 }
 img {
-  vertical-align: middle;
+  /* vertical-align: middle; */
 }
 .img-responsive,
 .thumbnail > img,
@@ -1600,7 +1601,7 @@ pre code {
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 1235px;
   }
 }
 .container-fluid {
