--- a/app/css/style-with-bootstrap.css
+++ b/app/css/style-with-bootstrap.css
@@ -7,7 +7,7 @@ nav li:hover {
 }
 
 section#about {
-  margin-top: 55px;
+  /* margin-top: 55px; */
   text-align: center;
   /* text-align: center; */
 }
@@ -70,9 +70,7 @@ img.tiny_logo.github_logo {
   -moz-background-size:cover;
   -o-background-size:cover;
   background-size:cover;
-background-position:center;
-  
-  
+  background-position:center;
 }
 
 
@@ -106,86 +104,38 @@ background-position:center;
   width: 60%;
   padding: 20px;
   margin: 0 auto;
-  /* height: 100%; */
-  /* font-size: 1.3em; */
 }
 
-@media screen and (max-width:630px) {
-  body {
-    font-size: 11px;
-  }
-
-  #about-description {
-    width: 80%;
-    padding: 20px;
-    margin: 0 auto;
-    /* font-size: 1.3em; */
-    float: none;
-  }
-
-  #about-description img {
-    /* display: block; */
-    /* width: 70%; */
-    margin: 0 auto;
-    float: none;
-  }
-
-  #about-description p {
-    display: block;
-    width: 100%;
-    margin: 0 auto;
-    margin-top: 20px;
-  }
-
-  p, li, input {
-    font-size: 1.5em;
-  } 
-}
-
-
-/* html {
-  font-size: 14px;
-} */
-
-/* @media (min-width: @screen-sm-min) { 
-  font-size: 34px;
-} */
-
-
-@media (max-width: @screen-lg) { 
-  
- }
-
- div.row {
+div.row {
   margin: 0 auto;
   width: 81%;
   height: 100%;
- }
-
- .wrapper-footer {
-   margin-top: 50px;
-   border-top: 1px solid #ddd;
-   border-bottom: 1px solid #ddd;
-   /* background-color: #eee; */
-   width: 100%;
-   position: absolute;
-   bottom: 0px;
- }
-
- footer {
-   padding: 20px 0;
-   text-align: center;
- }
-
-.track-map {
-/*   background: lightblue; */
-  height: 700px;
 }
+
+
 /* 
-.track-map .container {
-  height: 400px;
+.wrapper-footer {
+  margin-top: 50px;
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  width: 100%;
+  position: absolute;
+  bottom: 0px;
 } */
 
-.gallery-img {
-  height: 310px;
+
+.footer {
+  padding: 20px 0;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+.bottom-buffer { 
+  margin-botton:30px;
 }
