--- a/app/css/style-with-bootstrap.css
+++ b/app/css/style-with-bootstrap.css
@@ -1,5 +1,6 @@
 body {
   position: relative;
+  font-size: 18px;
 }
 
 nav li:hover {
@@ -48,23 +49,17 @@ img.tiny_logo.github_logo {
 #about {
   width: 100%;
   height: 600px;
-  overflow: auto;
+  /* overflow: auto; */
   margin: 0 auto;
   color: rgb(247, 255, 254);
   padding: 15px;
 
-  /*fixing image to background to render parallax scrolling*/
-  /* background: url(assets/france.jpg) no-repeat 50% -80px fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; */
-
-  background-image: url(/assets/france.jpg);
-  /* background-repeat:no-repeat;
-  background-size:contain;
-  background-position:center; */
-
+ background-image: 
+  linear-gradient(
+    rgba(0, 0, 0, 0.5),
+    rgba(0, 0, 0, 0.5)
+  ),
+  url(/assets/france.jpg);
   background-repeat:no-repeat;
   -webkit-background-size:cover;
   -moz-background-size:cover;
@@ -79,16 +74,25 @@ img.tiny_logo.github_logo {
   height: auto;
   border-radius: 20%;
   margin-right: 33px;
-  /* float: left; */
+  float: left;
   width: 68%;
 }
 
 #about p {
-  position: relative;
+  /* position: relative; */
   text-align: left;
   /* display: inline; */
   margin-left: 20px;
   font-size: 1.5em;
+  /* float: right; */
+  width: 500px;
+  /*   color: #1f0705; */
+  /* color: #965945; */
+  /* color: #4c1909; */
+  font-family: monospace;
+  font-style: italic;
+  /* mix-blend-mode: difference; */
+  /*   mix-blend-mode: exclusion; */
 }
 
 #about h3 {
@@ -97,19 +101,23 @@ img.tiny_logo.github_logo {
 
 #about h2 {
   margin-bottom: 20px;
+  font-size: 3.1rem;
+}
+
+#about h2:hover {
+  text-decoration: underline;
+/*   border-bottom: 10px solid; */
+
 }
 
 
-#about-description {
-  width: 60%;
-  padding: 20px;
-  margin: 0 auto;
-}
+#about-description {/* width: 60%; */padding: 20px;margin: 0 auto;height: 550px;}
 
 div.row {
   margin: 0 auto;
-  width: 81%;
+  /* width: 81%; */
   height: 100%;
+  /* text-align: center; */
 }
 
 
@@ -138,4 +146,54 @@ div.row {
 
 .bottom-buffer { 
   margin-botton:30px;
+}
+
+.footer, .navbar {
+  font-size: 1.2rem;
+}
+
+
+.nav-pills .nav-link.active, .show>.nav-pills .nav-link {
+  background-color: #9db6cf;
+}
+
+.portfolio-icons {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+  animation-duration: 1.5s;
+  animation-name: slidein;
+}
+
+
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%; 
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
+nav {
+  height: 76px;
+}
+
+.navbar-brand p {
+  font-size: 2.2em;
+  font-family: cursive;
+  font-style: bold;
+
+}
+
+.container img {
+  margin-bottom: 23px;
+}
+
+section {
+  margin-bottom: 39px;
 }
