--- a/app/css/style-with-bootstrap.css
+++ b/app/css/style-with-bootstrap.css
@@ -1,6 +1,14 @@
-body {
+html {
+  min-height: 100%;  
   position: relative;
+}
+
+body {
   font-size: 18px;
+
+/*   space for footer */
+  margin-bottom: 60px;
+
 }
 
 nav li:hover {
@@ -110,14 +118,11 @@ img.tiny_logo.github_logo {
 
 }
 
-
-#about-description {/* width: 60%; */padding: 20px;margin: 0 auto;height: 550px;}
-
 div.row {
   margin: 0 auto;
   /* width: 81%; */
   height: 100%;
-  /* text-align: center; */
+  text-align: center;
 }
 
 
@@ -132,21 +137,6 @@ div.row {
 } */
 
 
-.footer {
-  padding: 20px 0;
-  text-align: center;
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  line-height: 60px; /* Vertically center the text there */
-  background-color: #f5f5f5;
-}
-
-.bottom-buffer { 
-  margin-botton:30px;
-}
 
 .footer, .navbar {
   font-size: 1.2rem;
@@ -196,4 +186,90 @@ nav {
 
 section {
   margin-bottom: 39px;
+}
+
+div#portfolio-wrapper {
+  margin-top: 50px;
+}
+
+.bottom-buffer { 
+  margin-botton:30px;
+}
+
+.container h1, h2 {
+  text-align: center;
+  margin: 36px;
+}
+
+#about-description {
+  width: 60%;
+  padding: 20px;
+  padding-top: 9px;
+  height: 550px;
+  margin: 0 auto;
+}
+
+.first-spaceship img { 
+  height: 270px;
+}
+
+section#resume {
+  text-align: center;
+}
+
+.btn-primary {
+  background-color: #7d8690;
+  border-color: black;
+}
+
+.btn-primary:hover {
+  background-color: black;
+}
+
+
+.tiny_logo:hover {
+  transform: scale(1.5);
+  -ms-transform: scale(1.5);
+  -webkit-transform: scale(1.5);
+  -moz-transform: scale(1.5);
+  -o-transform: scale(1.5);
+}
+
+section#contact_me {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+section#contact_me p {
+  font-style: italic;
+}
+
+
+/* .footer {
+  padding: 20px 0;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+
+
+  height: 60px;
+  line-height: 60px;
+  background-color: black;
+}
+
+
+
+ */
+
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+  text-align: center;
 }
